# local-coding-agent

./: .env.example  .gitignore  FINDINGS.md  IMPLEMENTATION_STEPS.md  IMPLEMENTED.md  README.md  implementation_plan.md  local-coding-agent.code-workspace
docs/: BEDROCK_INTEGRATION.md  DEMO.md  FINDINGS.md  IMPLEMENTATION_STEPS.md  IMPLEMENTED.md  OVERVIEW.md  QUICKSTART.md  SETUP_FRESH_MACHINE.md  SLIDES.md  WINDOWS_VM.md
gateway/: litellm.yaml
memory/: docker-compose.yml  openmemory-bedrock.Dockerfile
openhands-coder/: pyproject.toml
openhands-coder/src/openhands_coder/: audit.py  cli.py  memory_direct.py  memory_episodic.py  report.py  server.py
openhands-coder/src/openhands_coder/assets/: config-template.yaml  docker-compose.yml  env.example  plan-and-delegate.yaml  preferences.md
openhands-coder/src/openhands_coder/assets/samples/csvstats/: README.md  test_demo.py
openhands-coder/src/openhands_coder/assets/samples/csvstats/csvstats/: __init__.py
openhands-coder/src/openhands_coder/assets/samples/textstats/: README.md  test_demo.py
openhands-coder/src/openhands_coder/assets/samples/textstats/textstats/: __init__.py
openhands-coder/tests/: test_audit.py  test_cli_demo_repo.py  test_memory_direct.py  test_memory_episodic.py  test_report.py  test_server.py
playbooks/: README.md
scripts/: goose-setup.sh  local-llm-up.sh  memory-down.sh  memory-up.sh  smoke-test.sh
templates/: AGENTS.md  goosehints
