[project]
name = "local-coding-agent"
version = "0.1.0"
description = "Private coding agent: Goose orchestrator + OpenHands implementer + shared persistent memory, fully local. Install, then: localagent init"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<4",
    "openhands-sdk>=1.27.0",
    "openhands-tools>=1.27.0",
]

[project.scripts]
localagent = "openhands_coder.cli:main"
openhands-coder = "openhands_coder.server:main"
memory-direct = "openhands_coder.memory_direct:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openhands_coder"]

[dependency-groups]
dev = ["pytest>=8"]
