[project]
name = "local-coding-agent"
version = "0.1.0"
description = "Private coding agent: Goose orchestrator + OpenHands implementer + shared persistent memory, all models on AWS Bedrock. Install, then: localagent init"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<4",
    "openhands-sdk>=1.27.0",
    "openhands-tools>=1.27.0",
    # Episodic memory runs in-process (no containers): Bedrock Titan
    # embeddings via boto3, brute-force cosine in NumPy over a local SQLite db.
    "boto3>=1.34",
    "numpy>=1.26",
]

[project.scripts]
localagent = "openhands_coder.cli:main"
openhands-coder = "openhands_coder.server:main"
memory-direct = "openhands_coder.memory_direct:main"
memory-episodic = "openhands_coder.memory_episodic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openhands_coder"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# Only our suite — the demo sample repos in assets/samples contain
# deliberately failing tests and must never be collected here.
testpaths = ["tests"]
